# simphyssim

./: .clang-format  CMakeLists.txt  README.md
include/: base.hpp  harmonic.hpp  manager.hpp  pendulum.hpp  spring.hpp  text.hpp
src/: base.cpp  harmonic.cpp  main.cpp  manager.cpp  pendulum.cpp  spring.cpp  text.cpp
